--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "notes",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "script.js",
   "scripts": {
+    "dev": "node script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
