--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPEN_API_KEY='sk-TxrAOClSslK4dPLtgfNmT3BlbkFJnyNsTUAzv5rZlAVsxAX' + 'T';
