--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPEN_API_KEY='sk-TxrAOClSslK4dPLtgfNmT3BlbkFJnyNsTUAzv5rZlAVsxAX' + 'T';
+OPEN_API_KEY='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';
