--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "notes",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
   "main": "script.js",
   "scripts": {
@@ -13,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.4",
+    "express": "^4.18.2",
     "openai": "^4.28.0"
-  }
+  },
+  "description": ""
 }
